# multimousergy

./: .gitignore  .hypercode-session.json  .hypercode_startup_marker  .hypernexus-session.json  .hypernexus_startup_marker  AGENTS.md  BENCHMARK_RESULTS.csv  CHANGELOG.md  CMakeLists.txt  DEPLOY.md  HANDOFF.md  IDEAS.md  LICENSE  MEMORY.md  PERFORMANCE.md  README.md  ROADMAP.md  TODO.md  VERSION.md  VISION.md  borg.db  build.bat  hypernexus.db  netmux.cfg  run_client.bat  run_server.bat  test.cfg
.borg/agent_memory/: memories.json
.borg/handoffs/: handoff_1780105119235.json
.hypercode/handoffs/: handoff_1780109149353.json  handoff_1780109449368.json  handoff_1780110049381.json  handoff_1780110349388.json  handoff_1780110649401.json  handoff_1780110949410.json  handoff_1780111249418.json
.hypercode/imported_sessions/docs/: auto-imported-agent-instructions.md
.hypernexus/handoffs/: handoff_1780769996328.json  handoff_1780770296340.json  handoff_1780770596353.json  handoff_1780770896363.json  handoff_1780771196378.json  handoff_1780771496384.json  handoff_1780771796397.json  handoff_1780772096412.json  handoff_1780772396416.json  handoff_1780772696424.json  handoff_1780772996432.json  handoff_1780773296439.json  handoff_1780773596439.json  handoff_1780773896439.json  handoff_1780774196441.json
.jules/memory/: architecture.md
.jules/sessions/: 38122925983030876.md
.tormentnexus/handoffs/: handoff_1780109749374.json  handoff_1780111549426.json  handoff_1780111849443.json
data/lancedb/memories.lance/_transactions/: 0-77e75e45-6510-4b71-9aab-33c0a14d8131.txn  1-bd0ad974-b6c5-43d3-b85e-900ca58d5c04.txn  10-0d44f512-b1fc-45ce-9f0a-ba8be54fd247.txn  100-7ca1087d-cee4-4914-b98c-7a844b85ef2d.txn  1000-8e0e417e-8bf4-4c40-ac21-aed09c47d0f9.txn  1001-669544f0-c26c-42b8-bdc9-0227029a07db.txn  1002-c326a90b-9050-4a1c-84c2-5bfdcc7738e7.txn  1003-d97475f3-ac92-4e09-b26d-984fdeb568f1.txn  1004-d418ccbf-1b8f-4215-ad2a-36734e97dac5.txn  1005-d0ce3595-528a-4eb2-a8a9-452a3a6d1861.txn  1006-961fee6f-7896-4146-9a44-f4611ecede60.txn  1007-7d8dbc41-edcb-480c-99b8-5883e2d82c6d.txn  1008-7601de70-7672-435c-a2c8-06ce5b6852c4.txn  1009-f4176e5c-f509-48d8-91f0-b9df6b7c8541.txn  101-174bee8b-e314-4ee3-8bf5-91f61cbd85e6.txn  1010-aaafbcb4-e3ca-44ca-9a8e-11d265d7c87d.txn  1011-95b1712d-2d40-4a6b-bb0b-c65ff9d0d086.txn  1012-1489c2fb-0344-4b87-b5ab-b2372b3d8e91.txn  1013-b8f5a086-7cf8-4c0b-9f08-d913e7e47e87.txn  1014-cf98c0e2-fac4-4c67-bc25-7e7c39a1a3a2.txn  1015-8a1a4dd6-e31c-46f3-8767-7374178e58f2.txn  1016-72e66fdc-8a82-463a-b607-a661e231a26b.txn  1017-e27e2c7b-7e65-42ae-a631-0b4243ff8160.txn  1018-a885bf87-cae2-4480-b1a0-30c512e68cf9.txn  1019-3678327c-2793-40ca-bdc7-e7ef1d734f77.txn  102-782ebe1f-d5f8-4fb5-9a60-3b6574ede51b.txn  1020-5897ee28-6123-43df-a0ca-37f58b66f66c.txn  1021-a5c4790a-757c-4d7b-b625-153ab2d45b67.txn  1022-b13159a8-e49e-4cb4-9a41-bb4f7c88e536.txn  1023-eec6eba1-d99e-4802-8b66-43778033cf94.txn  1024-dad1d408-a8e4-44d9-aded-6b3eb0673b28.txn  1025-feb03c83-15b7-467b-a9a9-01ce6f9f7ace.txn  1026-f0c5ff74-3ec1-42ee-8762-fd1ec68b605e.txn  1027-cfea70f2-e6ba-4a26-b2a4-a635e1cd6428.txn  1028-563ba465-640f-4590-b4f0-1a2342eb49c7.txn  1029-c2d4851e-d3ed-44bd-ae93-d7637ce12a35.txn  103-a7c340c2-8c4d-4a19-b89d-2044518f27c9.txn  1030-1173e440-b946-4d35-8d4f-208e72476b9b.txn  1031-f83e0985-be66-4dda-9668-a201a84987b3.txn  1032-2d69dfb9-94af-486a-9dda-4c131961e0aa.txn  (+1126 more)
data/lancedb/memories.lance/_versions/: 1.manifest  10.manifest  100.manifest  1000.manifest  1001.manifest  1002.manifest  1003.manifest  1004.manifest  1005.manifest  1006.manifest  1007.manifest  1008.manifest  1009.manifest  101.manifest  1010.manifest  1011.manifest  1012.manifest  1013.manifest  1014.manifest  1015.manifest  1016.manifest  1017.manifest  1018.manifest  1019.manifest  102.manifest  1020.manifest  1021.manifest  1022.manifest  1023.manifest  1024.manifest  1025.manifest  1026.manifest  1027.manifest  1028.manifest  1029.manifest  103.manifest  1030.manifest  1031.manifest  1032.manifest  1033.manifest  (+1126 more)
include/: AuthModule.hpp  AuthService.hpp  ClipboardModule.hpp  CommonTypes.hpp  ConfigGUI.hpp  ConfigManager.hpp  D3D11Overlay.hpp  DesktopCapture.hpp  DriverInterface.hpp  FileTransferEngine.hpp  InputEngine.hpp  Logger.hpp  NetMuxFramework.hpp  NetworkManager.hpp  OverlayEngine.hpp  PacketSerializer.hpp  SpatialViewport.hpp  SyncModule.hpp  Timer.hpp  VideoDecoder.hpp  VideoEncoder.hpp  WebRTCManager.hpp  WebcamCapture.hpp  webrtc_mock.hpp
src/: AuthModule.cpp  AuthService.cpp  ClipboardModule.cpp  ConfigGUI.cpp  ConfigManager.cpp  D3D11Overlay.cpp  DesktopCapture.cpp  DriverInterface.cpp  FileTransferEngine.cpp  InputEngine.cpp  Logger.cpp  NetMuxFramework.cpp  NetworkManager.cpp  OverlayEngine.cpp  PacketSerializer.cpp  SpatialViewport.cpp  SyncModule.cpp  Timer.cpp  VideoDecoder.cpp  VideoEncoder.cpp  WebRTCManager.cpp  WebcamCapture.cpp  main.cpp
tests/: analyze_bench.py  benchmark_run.sh  e2e_sync_test.py  live_edit_sim.py  perf_test.py  test_auth.cpp  test_auth_service.cpp  test_clipboard.cpp  test_file_transfer.cpp  test_input.cpp  test_main.cpp  test_multi_client.cpp  test_network.cpp  test_stress.cpp  test_sync.cpp  test_sync_consistency.cpp  test_sync_detailed.cpp
ui/: index.html  main.js  package-lock.json  package.json  preload.js
